<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="200dp"
        android:id="@+id/eUsuario"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/correo"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:id="@+id/eCorreo"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:text="@string/contraseña"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:id="@+id/ePassword"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recontraseña"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:id="@+id/eRepassword"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:id="@+id/bRegistrarse"
            android:onClick="onClick"
            android:text="@string/cerrar"
            android:textColor="@color/white"
            android:background="@color/darkturquoise"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>