<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.encuentrame.IngresoActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="15sp"
    android:text="@string/correo"
    />
 <EditText
     android:layout_width="200dp"
     android:id="@+id/eCorreo"
     android:inputType="textEmailAddress"
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:gravity="center"

     />
<TextView
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="15sp"
    android:text="@string/contraseña"
    />
 <EditText
     android:layout_width="200dp"
     android:id="@+id/ePassword"
     android:inputType="textPassword"
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:gravity="center"

     />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:onClick="onClick"
            android:id="@+id/bIngresar"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            android:background="@color/darkturquoise"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:id="@+id/bCancelar"
            android:onClick="onClick"
            android:text="@string/cancelar"
            android:textColor="@color/gray"
            android:background="@color/white"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>
